@@ -10,44 +10,48 @@ package org.intermine.bio.dataconversion;
  *
  */
 
-import java.time.format.DateTimeFormatter;
+import java.text.ParseException;
 import java.time.DateTimeException;
 import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
 
-import org.jsoup.Jsoup;
 import org.apache.commons.lang.WordUtils;
 import org.intermine.xml.full.Attribute;
 import org.intermine.xml.full.Item;
-
-
-
+import org.jsoup.Jsoup;
 
 /**
  * Class with utility functions for converter classes
+ * 
  * @author
  */
-public class ConverterUtils
-{
+public class ConverterUtils {
     public static final Map<String, String> PHASE_NUMBER_MAP = Map.of(
-        "1", "1", 
-        "2", "2", 
-        "3", "3", 
-        "4", "4", 
-        "i", "1", 
-        "ii", "2", 
-        "iii", "3", 
-        "iv", "4"
-    );
+            "1", "1",
+            "2", "2",
+            "3", "3",
+            "4", "4",
+            "i", "1",
+            "ii", "2",
+            "iii", "3",
+            "iv", "4");
     public static final DateTimeFormatter P_DATE_D_M_Y_SLASHES = DateTimeFormatter.ofPattern("d/M/uuuu");
     public static final DateTimeFormatter P_DATE_D_MWORD_Y_SPACES = DateTimeFormatter.ofPattern("d MMMM uuuu");
     public static final DateTimeFormatter P_DATE_MWORD_D_Y_HOUR = DateTimeFormatter.ofPattern("MMM d uuuu hh:mma");
+    public static final DateTimeFormatter P_DATE_M_D_Y_TIME = DateTimeFormatter.ofPattern("M/d/uuuu hh:mm:ss");
 
-    /* Regex to Java converter: https://www.regexplanet.com/advanced/java/index.html */
-    public static final Pattern P_EU_ID = Pattern.compile("(?:(CTIS)|(EUCTR))?(\\d{4}-\\d{6}-\\d{2})(?:-(\\d{2})|-(.*))?");  // Both EUCTR and CTIS (they might have the same format)
+    /*
+     * Regex to Java converter: https://www.regexplanet.com/advanced/java/index.html
+     */
+    public static final Pattern P_PUBMED_ID = Pattern.compile(".*pubmed.*\\/([^?\\/]+).*");
+    public static final Pattern P_ID_AT_END_OF_URL = Pattern.compile(".*\\/([^?\\/]+).*");
+    public static final Pattern P_EU_ID = Pattern
+            .compile("(?:(CTIS)|(EUCTR))?(\\d{4}-\\d{6}-\\d{2})(?:-(\\d{2})|-(.*))?"); // Both EUCTR and CTIS (they
+                                                                                       // might have the same format)
     public static final Pattern P_NCT_ID = Pattern.compile("NCT\\d{8}");
     public static final Pattern P_WHO_ID = Pattern.compile("U\\d{4}-\\d{4}-\\d{4}");
     // public static final Pattern P_ANZCTR_ID = Pattern.compile();
@@ -68,17 +72,20 @@ public class ConverterUtils
     // public static final Pattern P_SLCTR_ID = Pattern.compile();
 
     /**
-     * Check if a string is null, empty, only contains whitespaces, or is equal to "NULL".
+     * Check if a string is null, empty (after trim), or is equal to
+     * "NULL".
      * 
-     * @return true if null or empty or only contains whitespaces or is equal to "NULL", false otherwise
+     * @return true if null or empty or only contains whitespaces or is equal to
+     *         "NULL", false otherwise
      */
-    public static boolean isNullOrEmptyOrBlank(String s) {
-        return (s == null || s.isEmpty() || s.equalsIgnoreCase("NULL") || s.isBlank());
+    public static boolean isBlankOrNull(String s) {
+        return (s == null || s.trim().isEmpty() || s.equalsIgnoreCase("NULL"));
     }
 
     /**
      * TODO
      * https://stackoverflow.com/a/43133958
+     * 
      * @param string
      * @param numLines
      * @return
@@ -101,6 +108,7 @@ public class ConverterUtils
 
     /**
      * TODO
+     * 
      * @param dateStr
      * @param dateFormatter
      * @return
@@ -114,10 +122,30 @@ public class ConverterUtils
                 // ISO date format parsing
                 parsedDate = LocalDate.parse(dateStr);
             }
-        } catch(DateTimeException e) {
+        } catch (DateTimeException e) {
             ;
         }
         return parsedDate;
+    }
+
+    public static boolean booleanFromString(String boolStr) throws ParseException {
+        if (!ConverterUtils.isBlankOrNull(boolStr)) {
+            if (boolStr.equalsIgnoreCase("true") || boolStr.equalsIgnoreCase("false")) {
+                return true;
+            } else {
+                throw new ParseException("Unexpected value in string to convert to boolean: " + boolStr, 0);
+            }
+        }
+
+        return false;
+    }
+
+    public static String booleanToString(Boolean b) {
+        String bs = null;
+        if (b != null) {
+            bs = b.toString();
+        }
+        return bs;
     }
 
     /**
@@ -139,25 +167,27 @@ public class ConverterUtils
      */
     public static String normaliseWord(String w) {
         if (w.length() > 0) {
-            w = w.substring(0,1).toUpperCase() + w.substring(1).toLowerCase();
+            w = w.substring(0, 1).toUpperCase() + w.substring(1).toLowerCase();
         }
         return w;
     }
 
     /**
      * TODO
+     * 
      * @param w
      * @return
      */
     public static String capitaliseFirstLetter(String w) {
         if (w.length() > 0) {
-            w = w.substring(0,1).toUpperCase() + w.substring(1);
+            w = w.substring(0, 1).toUpperCase() + w.substring(1);
         }
         return w;
     }
-    
+
     /**
      * TODO
+     * 
      * @param dateStr
      * @return
      */
@@ -174,41 +204,46 @@ public class ConverterUtils
 
     /**
      * TODO
+     * 
      * @param item
      * @param attrName
      * @return
      */
-    public static String getValueOfItemAttribute(Item item, String attrName) {
+    public static String getAttrValue(Item item, String attrName) {
         String attrValue = null;
-        Attribute itemAttr = item.getAttribute(attrName);
-        if (itemAttr != null) {
-            attrValue = itemAttr.getValue();
+        if (item != null) {
+            Attribute itemAttr = item.getAttribute(attrName);
+            if (itemAttr != null) {
+                attrValue = itemAttr.getValue();
+            }
         }
         return attrValue;
     }
 
     /**
-     * Concatenate text on a new line to study brief description field value.
+     * Concatenate text on a new line to study description field value.
      * 
-     * @param study the study item to modify the brief description field of
-     * @param text the text to concatenate (or set, if the field's value is empty) to the study's brief description
+     * @param study the study item to modify the description field of
+     * @param text  the text to concatenate (or set, if the field's value is empty)
+     *              to the study's description
      */
-    public static void addToBriefDescription(Item study, String text) {
-        if (!ConverterUtils.isNullOrEmptyOrBlank(text)) {
-            Attribute briefDescription = study.getAttribute("briefDescription");
-            if (briefDescription != null) {
-                String currentDesc = briefDescription.getValue();
-                if (!ConverterUtils.isNullOrEmptyOrBlank(currentDesc)) {
-                    study.setAttribute("briefDescription", currentDesc + "\n" + text);
+    public static void addToDescription(Item study, String text) {
+        if (!ConverterUtils.isBlankOrNull(text)) {
+            Attribute description = study.getAttribute("description");
+            if (description != null) {
+                String currentDesc = description.getValue();
+                if (!ConverterUtils.isBlankOrNull(currentDesc)) {
+                    study.setAttribute("description", currentDesc + "\n" + text);
                 } else {
-                    study.setAttribute("briefDescription", text);
+                    study.setAttribute("description", text);
                 }
             }
         }
     }
 
     /**
-     * Convert phase number (1-4) to digit string. Only returns a different string if the input is in Roman numerals.
+     * Convert phase number (1-4) to digit string. Only returns a different string
+     * if the input is in Roman numerals.
      * 
      * @param n the input digit string, possibly in roman numerals
      * @return the converted phase number
@@ -236,15 +271,16 @@ public class ConverterUtils
 
     /**
      * Remove leading and trailing double quotes from a string.
-     * WHO Note: unfortunately opencsv only transforms triple double-quoted values into single double-quoted values, 
+     * WHO Note: unfortunately opencsv only transforms triple double-quoted values
+     * into single double-quoted values,
      * so we have to remove the remaining quotes manually.
      * 
      * @param s the string to remove quotes from
      * @return the string without leading and trailing double quotes
      */
     public static String removeQuotes(String s) {
-        if (s != null && s.length() > 1 && s.charAt(0) == '"' && s.charAt(s.length()-1) == '"') {
-            return s.substring(1, s.length()-1);
+        if (s != null && s.length() > 1 && s.charAt(0) == '"' && s.charAt(s.length() - 1) == '"') {
+            return s.substring(1, s.length() - 1);
         }
         return s;
     }
@@ -256,8 +292,10 @@ public class ConverterUtils
      * @return true if string is a positive whole number, false otherwise
      */
     public static boolean isPosWholeNumber(String s) {
-        if (s == null || s.length() == 0) { return false; }
-        
+        if (s == null || s.length() == 0) {
+            return false;
+        }
+
         for (int i = 0; i < s.length(); i++) {
             if (Character.isDigit(s.charAt(i))) {
                 continue;
@@ -270,12 +308,13 @@ public class ConverterUtils
 
     /**
      * TODO
+     * 
      * @param str
      * @param charToReplace
      * @return
      */
     public static String capitaliseAndReplaceCharBySpace(final String str, final char charToReplace) {
-        if (ConverterUtils.isNullOrEmptyOrBlank(str)) {
+        if (ConverterUtils.isBlankOrNull(str)) {
             return str;
         }
         String capitalised = WordUtils.capitalizeFully(str);
